@@ -135,15 +135,19 @@ RenderTarget::RenderTarget(RenderDevice* const rd, const RenderTargetType type, 
          {
             glGenTextures(1, &m_depth_tex);
             glBindTexture(target, m_depth_tex);
-            // VR depth near/far plane is not fitted so we use a float depth buffer.
-            const GLuint depth_type = m_stereo == STEREO_VR ? GL_FLOAT : GL_UNSIGNED_SHORT;
+            #ifdef __OPENGLES__
+            const GLuint depth_type = GL_UNSIGNED_SHORT;
+            #else
+            // VR room need larger depth buffer
+            const GLuint depth_type = GL_FLOAT;
+            #endif
             switch (m_type)
             {
             case RT_DEFAULT: glTexImage2D(target, 0, GL_DEPTH_COMPONENT16, width, height, 0, GL_DEPTH_COMPONENT, depth_type, nullptr); break;
             case RT_STEREO: glTexImage3D(target, 0, GL_DEPTH_COMPONENT16, width, height, 2, 0, GL_DEPTH_COMPONENT, depth_type, nullptr); break;
             case RT_CUBEMAP:
                for (int i = 0; i < 6; i++)
-                  glTexImage2D(GL_TEXTURE_CUBE_MAP_POSITIVE_X + i, 0, GL_DEPTH_COMPONENT16, width, height, 0, GL_DEPTH_COMPONENT, GL_UNSIGNED_SHORT, nullptr);
+                  glTexImage2D(GL_TEXTURE_CUBE_MAP_POSITIVE_X + i, 0, GL_DEPTH_COMPONENT16, width, height, 0, GL_DEPTH_COMPONENT, depth_type, nullptr);
                break;
             }
          }
@@ -216,6 +220,7 @@ RenderTarget::RenderTarget(RenderDevice* const rd, const RenderTargetType type, 
       m_depth_sampler = sharedDepth->m_depth_sampler;
    }
    m_use_alternate_depth = m_rd->m_useNvidiaApi || !m_rd->m_INTZ_support;
+   const D3DFORMAT depthFormat = D3DFMT_D16; // Some VR room needs more depth precision but since DX9 build is not meant for VR wee keep it like this for the time being
    if (nMSAASamples > 1)
    {
       // MSAA is made through a rendering surface that must be resolved a texture to be sampled
@@ -224,7 +229,7 @@ RenderTarget::RenderTarget(RenderDevice* const rd, const RenderTargetType type, 
       constexpr DWORD ms_quality = 0;
       CHECKD3D(m_rd->GetCoreDevice()->CreateRenderTarget(width, height, (D3DFORMAT)format, ms_type, ms_quality, FALSE, &m_color_surface, nullptr));
       if (with_depth && !m_shared_depth)
-         CHECKD3D(m_rd->GetCoreDevice()->CreateDepthStencilSurface(width, height, D3DFMT_D16, ms_type, ms_quality, FALSE, &m_depth_surface, nullptr));
+         CHECKD3D(m_rd->GetCoreDevice()->CreateDepthStencilSurface(width, height, depthFormat, ms_type, ms_quality, FALSE, &m_depth_surface, nullptr));
    }
    else
    {
@@ -239,7 +244,7 @@ RenderTarget::RenderTarget(RenderDevice* const rd, const RenderTargetType type, 
          if (m_use_alternate_depth)
          {
             // Alternate depth path. Depth surface and depth texture are separated, synced with a copy.
-            CHECKD3D(m_rd->GetCoreDevice()->CreateDepthStencilSurface(width, height, D3DFMT_D16 /*D3DFMT_D24X8*/, D3DMULTISAMPLE_NONE, 0, FALSE, &m_depth_surface, nullptr));
+            CHECKD3D(m_rd->GetCoreDevice()->CreateDepthStencilSurface(width, height, depthFormat /*D3DFMT_D24X8*/, D3DMULTISAMPLE_NONE, 0, FALSE, &m_depth_surface, nullptr));
 #ifndef DISABLE_FORCE_NVIDIA_OPTIMUS
             if (m_rd->NVAPIinit)
             {
