@@ -248,7 +248,6 @@ ScaleToFixedWidth =
 ScaleAbsolute = 
 ScaleRelative = 
 NearPlane = 
-FarPlane = 
 
 ; Table settings
 Slope = 
