@@ -2168,8 +2168,6 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,182,127,10
     LTEXT           "VR near plane",IDC_NEAR_LABEL,151,199,48,10
     EDITTEXT        IDC_NEAR_PLANE,200,197,40,12,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "VR far plane",IDC_FAR_LABEL,155,214,40,10
-    EDITTEXT        IDC_FAR_PLANE,200,212,40,12,ES_RIGHT | ES_AUTOHSCROLL
     PUSHBUTTON      "Table Rec",IDC_BTTABLERECENTER,293,18,50,14
     CTEXT           "",IDC_TABLEREC_TEXT,293,32,49,10,SS_CENTERIMAGE
     COMBOBOX        IDC_JOYTABLERECENTER,292,42,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
