@@ -121,6 +121,8 @@ FIXES:
 - timers with a -1 interval are always fired after physics and animation, but before rendering, allowing the script to update visual parts accordingly without any visual lag.
   This also applies to the new 'Animate' event which is designed for this purpose.
 
+- fix visible depth range evaluation, allowing to simplify VR settings and to edit large VR room in LiveUI. Note that loading old tables will take a bit longer until they are saved with 10.8, since they need to compute bounds of each part.
+
 - fix analogue nudge not working for joysticks/gamepads in XInput mode
 
 - fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player
